# wrap_py

./: project.toml  pyproject.toml  server_thread.py  setup.cfg  tox.ini
babel_commands/: 0_extract_messages.bat  1_init_catalog.bat  2_update_catalog.bat  3_compile_catalog.bat
scripts/: compile.bat  upload.bat
tests/: test_1.py
transl/translations/ru_RU/LC_MESSAGES/: wrap_engine.po  wrap_py.po
wrap_py/: __init__.py  _error_handling.py  _event_handler_registrator.py  _remote.py  _server_thread.py  _utils.py  _wrap_sprite_utils.py  front.py  server.py  server_class.py  server_interface_replacer.py  server_service.py  server_service_markers.py  settings.py  site.py  wrap_app.py  wrap_base.py  wrap_event.py  wrap_sprite.py  wrap_sprite_actions.py  wrap_sprite_actions_async.py  wrap_sprite_text.py  wrap_sprite_type.py  wrap_sprite_utils.py  wrap_world.py
wrap_py/ru/: __init__.py  _event_handler_registrator.py  programma.py
wrap_py/transl/translations/ru_RU/LC_MESSAGES/: wrap_engine.po  wrap_py.po
wrap_py_ru/: __init__.py
