[metadata]
name = wrap_py
version = 0.1.2

[options]
packages = wrap_py, wrap_py.ru

install_requires =
    wrap_engine>=0.1.2
    colorama>=0.4.4

[options.package_data]
    * = transl/compiled/*/LC_MESSAGES/*.mo


[options.entry_points]
console_scripts =
    wrap_py_data = wrap_py.front:make_data_folders
    wrap_py_data_alt = wrap_py.front:make_data_folders_alt
